--- a/YellowstonePathology/UI/Gross/BlockOptionsPage.xaml
+++ b/YellowstonePathology/UI/Gross/BlockOptionsPage.xaml
@@ -22,6 +22,7 @@
             <Button Margin="10" Width="140" Height="50" Content="Reprint Block" Click="ButtonReprintBlock_Click" />
 			<Button Margin="10" Width="140" Height="50" Content="FS to IC only" Click="ButtonChangeFSToIC_Click" />
             <Button Margin="10" Width="140" Height="50" Content="Hold Block" Click="ButtonHoldBlock_Click" />
+            <Button Margin="10" Width="140" Height="50" Content="Decal" Click="ButtonDecal_Click" />
         </StackPanel>
 
         <ListBox Grid.Column="0" Grid.Row="3" ItemsSource="{Binding Path=EmbeddingInstructionList}" Name="ListBoxEmbeddingInstructionList" SelectionChanged="ListBoxEmbeddingInstructionList_SelectionChanged"
