--- a/YellowstonePathology/UI/Gross/PrintBlockPage.xaml
+++ b/YellowstonePathology/UI/Gross/PrintBlockPage.xaml
@@ -108,6 +108,7 @@
                                 </Border>
 								<StackPanel Grid.Column="0" Grid.Row="1" Background="{Binding Path=Element.[BlockColor].Value}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                                     <TextBlock Margin="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="{Binding Path=Element.[BlockColor].Value}" TextAlignment="Center" Text="{Binding Path=Element[Label].Value}" TextWrapping="Wrap" />
+                                    <TextBlock Margin="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="{Binding Path=Element.[BlockColor].Value}" TextAlignment="Center" Text="{Binding Path=Element[Decal].Value}" TextWrapping="Wrap" />
                                     <TextBlock Margin="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="{Binding Path=Element.[BlockColor].Value}" TextAlignment="Center" Text="{Binding Path=Element[EmbeddingInstructions].Value}" TextWrapping="Wrap" />
 								</StackPanel>
 							</Grid>
@@ -131,13 +132,13 @@
 					<RowDefinition Height="*"></RowDefinition>
 				</Grid.RowDefinitions>
                 
-				<Button Grid.Row="0" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Add Block" Click="ButtonAddBlock_Click" />
-				<Button Grid.Row="1" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Number Pad" Click="ButtonNumberPad_Click" />
-				<Button Grid.Row="2" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Delete" Click="ButtonDelete_Click" />
-				<Button Grid.Row="3" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="History" Click="ButtonHistory_Click" />
-                <Button Grid.Row="4" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Stains" Click="ButtonStains_Click" />
-                <Button Grid.Row="5" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Hold All" Click="ButtonHoldAll_Click" />
-                <Button Grid.Row="6" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Next" Click="ButtonNext_Click" />
+				<Button Grid.Row="0" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Add Block" Click="ButtonAddBlock_Click" />
+				<Button Grid.Row="1" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Number Pad" Click="ButtonNumberPad_Click" />
+				<Button Grid.Row="2" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Delete" Click="ButtonDelete_Click" />
+				<Button Grid.Row="3" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="History" Click="ButtonHistory_Click" />
+                <Button Grid.Row="4" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Stains" Click="ButtonStains_Click" />
+                <Button Grid.Row="5" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Hold All" Click="ButtonHoldAll_Click" />
+                <Button Grid.Row="6" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Next" Click="ButtonNext_Click" />
 
             </Grid>
 		</Grid>
