--- a/YellowstonePathology/UI/Client/RequisitionOptionsDialog.xaml
+++ b/YellowstonePathology/UI/Client/RequisitionOptionsDialog.xaml
@@ -30,6 +30,7 @@
         <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" HorizontalAlignment="Right" FontWeight="Bold">Form:</TextBlock>            
         <ComboBox Name="ComboBoxForm" Grid.Column="1" Grid.Row="3" Margin="2,2,2,2">
             <ComboBoxItem IsSelected="True">Standard</ComboBoxItem>
+            <ComboBoxItem>Cytology</ComboBoxItem>
             <ComboBoxItem>Oncology</ComboBoxItem>
             <ComboBoxItem>IHC/Molecular</ComboBoxItem>
         </ComboBox>
