--- a/YellowstonePathology/UI/Common/OrderDialog.xaml
+++ b/YellowstonePathology/UI/Common/OrderDialog.xaml
@@ -220,13 +220,15 @@
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
                             <ColumnDefinition Width="*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
-                        <CheckBox Grid.Column="0" Margin="2,2,2,2" VerticalAlignment="Center" IsChecked="{Binding Path=Element[IsSelected].Value, Converter={StaticResource BooleanStringConverter}}" />                        
+                        <CheckBox Grid.Column="0" Margin="2,2,2,2" VerticalAlignment="Center" IsChecked="{Binding Path=Element[IsSelected].Value, Converter={StaticResource BooleanStringConverter}}" />
                         <TextBlock Grid.Column="1" FontWeight="Bold" Margin="2,2,0,2" VerticalAlignment="Center" Text="{Binding Path=Element[Type].Value}"></TextBlock>
-                        <TextBlock Grid.Column="2" FontWeight="Bold" Margin="0,2,2,2" VerticalAlignment="Center">:</TextBlock>
-                        <TextBlock Grid.Column="3" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Element[Label].Value}"></TextBlock>
+                        <TextBlock Grid.Column="2" FontWeight="Bold" Margin="2,2,0,2" VerticalAlignment="Center" Text="{Binding Path=Element[Decal].Value}"></TextBlock>
+                        <TextBlock Grid.Column="3" FontWeight="Bold" Margin="0,2,2,2" VerticalAlignment="Center">:</TextBlock>
+                        <TextBlock Grid.Column="4" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Element[Label].Value}"></TextBlock>
 
                     </Grid>
                 </HierarchicalDataTemplate>
