--- a/YellowstonePathology/UI/Test/RetrospectiveReviewResultPage.xaml
+++ b/YellowstonePathology/UI/Test/RetrospectiveReviewResultPage.xaml
@@ -111,18 +111,21 @@
                                     </Grid.RowDefinitions>
 
                                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,15,2,2" FontWeight="Bold" VerticalAlignment="Bottom">Specimen:</TextBlock>
-                                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold" Text="{Binding Path=SpecimenDescription}" VerticalAlignment="Bottom"></TextBlock>
-                                    
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Result:</TextBlock>
-                                    <ComboBox Name="ComboBoxResult" Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" IsEditable="True" Tag="{Binding Path=.}" Text="{Binding Path=Result}" SelectionChanged="ComboboxResult_SelectionChanged">
+                                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=SpecimenDescription}" VerticalAlignment="Bottom"></TextBlock>
+
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Bottom">Diagnosis:</TextBlock>
+                                    <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=Diagnosis}" VerticalAlignment="Bottom"></TextBlock>
+
+                                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">Result:</TextBlock>
+                                    <ComboBox Name="ComboBoxResult" Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" IsEditable="True" Tag="{Binding Path=.}" Text="{Binding Path=Result}" SelectionChanged="ComboboxResult_SelectionChanged">
                                         <ComboBoxItem Tag="Hide">Agree</ComboBoxItem>
                                         <ComboBoxItem Tag="Show">Disagree</ComboBoxItem>
                                     </ComboBox>
 
-                                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">Comment:</TextBlock>
-                                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Stretch" AcceptsReturn="True" Height="100" Text="{Binding Path=Comment}"></TextBox>
+                                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold">Comment:</TextBlock>
+                                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" HorizontalAlignment="Stretch" AcceptsReturn="True" Height="100" Text="{Binding Path=Comment}"></TextBox>
 
-                                    <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3">
+                                    <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4">
                                         <Grid.Style>
                                             <Style>
                                                 <Setter Property="Grid.Visibility" Value="Collapsed"></Setter>
