--- a/YellowstonePathology/UI/RetrospectiveReviews.xaml
+++ b/YellowstonePathology/UI/RetrospectiveReviews.xaml
@@ -11,9 +11,57 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        <ListView Name="ListViewAccessionOrders" Margin="2,2,2,2" Grid.Column="0" Grid.Row="0" ItemsSource="{Binding Path=ReportSearchList}">
+
+        <ToolBarTray Grid.Row="0" Background="Gainsboro" Name="MainToolbar">
+            <ToolBar>
+
+                <TextBox Name="TextBoxWorkDate" Margin="2" Width="80" Text="{Binding Path=WorkDate, Converter={StaticResource ShortDateConverter}}" />
+
+                <Button Click="ButtonAccessionOrderBack_Click">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Resources/Previous.ico" Margin="2" Height="16"></Image>
+                    </StackPanel>
+                </Button>
+
+                <Button Click="ButtonAccessionOrderForward_Click">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Resources/Next.ico" Margin="2" Height="16"></Image>
+                    </StackPanel>
+                </Button>
+
+                <Button Margin="2" Click="ButtonAccessionOrderRefresh_Click">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Resources/Refresh.ico"></Image>
+                        <TextBlock Margin="2,0,0,0">Refresh</TextBlock>
+                    </StackPanel>
+                </Button>
+
+                <Button Margin="2" Click="ButtonPrintList_Click">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Resources/Printer.ico"></Image>
+                        <TextBlock Margin="2,0,0,0">Print List</TextBlock>
+                    </StackPanel>
+                </Button>
+
+                <Button Margin="2" Click="ButtonAddRandom_Click">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Margin="2" Height="16" Source="/UserInterface;component/Resources/Order.ico"></Image>
+                        <TextBlock Margin="2,0,0,0">Add Random</TextBlock>
+                    </StackPanel>
+                </Button>
+
+            </ToolBar>
+        </ToolBarTray>
+
+        <ListView Name="ListViewReviews" Margin="2,2,2,2" Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Path=ReportSearchList}">
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Delete Review" Click="ContextMenuDeleteReview_Click"></MenuItem>
+                </ContextMenu>
+            </ListView.ContextMenu>
             <ListView.View>
                 <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Case List">
                     <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="85"/>
@@ -24,5 +72,6 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        
     </Grid>
 </Window>
