--- a/YellowstonePathology/UI/RetrospectiveReviews.xaml
+++ b/YellowstonePathology/UI/RetrospectiveReviews.xaml
@@ -56,19 +56,18 @@
             </ToolBar>
         </ToolBarTray>
 
-        <ListView Name="ListViewReviews" Margin="2,2,2,2" Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Path=ReportSearchList}">
+        <ListView Name="ListViewReviews" Margin="2,2,2,2" Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Path=RetrospectiveReviewList}">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Delete Review" Click="ContextMenuDeleteReview_Click"></MenuItem>
                 </ContextMenu>
             </ListView.ContextMenu>
             <ListView.View>
-                <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Case List">
+                <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Retrospective Reviews">
                     <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="85"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=AccessionDate, Converter={StaticResource MilitaryDateTimeConverter}}" Header="Accession Date" Width="110"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=PatientName}" Header="Patient Name" Width="150"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=PanelSetName}" Header="Report" Width="170"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=FinalDate, Converter={StaticResource ShortDateConverter}}" Header="Final" Width="150"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=SurgicalFinaledBy}" Header="Surgical Final" Width="170"/>
                 </GridView>
             </ListView.View>
         </ListView>
