--- a/YellowstonePathology/UI/Test/HPV1618SolidTumorResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HPV1618SolidTumorResultPage.xaml
@@ -124,10 +124,10 @@
 					<ComboBox Name="ComboBoxIndication" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=IndicationList}" 
                               Text="{Binding Path=PanelSetOrder.Indication}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold">HPV 16 Final Result:</TextBlock>
+					<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold">HPV 16 Result:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.HPV16Result}" HorizontalAlignment="Stretch" IsEnabled="False"/>
 
-					<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold">HPV 18 Final Result:</TextBlock>
+					<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold">HPV 18/45 Result:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.HPV18Result}" HorizontalAlignment="Stretch" IsEnabled="False"/>
 
                     <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Comment:</TextBlock>
