--- a/YellowstonePathology/UI/AmendmentEditPage.xaml
+++ b/YellowstonePathology/UI/AmendmentEditPage.xaml
@@ -119,7 +119,8 @@
             </Grid>
 
 			<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,0">Amendment</TextBlock>
-			<TextBox Name="TextBoxAmendment" Grid.Column="0" Grid.Row="3" Text="{Binding Path=SelectedAmendment.Text}" TextWrapping="Wrap" Margin="2,0,2,2" Grid.ColumnSpan="4" AcceptsReturn="True"></TextBox>
+			<TextBox Name="TextBoxAmendment" Grid.Column="0" Grid.Row="3" Text="{Binding Path=SelectedAmendment.Text}" TextWrapping="Wrap" 
+                     Margin="2,0,2,2" Grid.ColumnSpan="4" AcceptsReturn="True" IsEnabled="{Binding Path=SelectedAmendment.Final, Converter={StaticResource InverseBooleanConverter}}"></TextBox>
 		</Grid>
 
 		<Grid Grid.Row="1">
