--- a/YellowstonePathology/UI/AmendmentPage.xaml
+++ b/YellowstonePathology/UI/AmendmentPage.xaml
@@ -116,7 +116,8 @@
                 <CheckBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" IsChecked="{Binding Path=Amendment.DistributeOnFinal}"></CheckBox>
 
                 <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,0" FontWeight="Bold">Amendment:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="3" Margin="2,0,2,2" Text="{Binding Path=Amendment.Text}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+                <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="3" Margin="2,0,2,2" Text="{Binding Path=Amendment.Text}" TextWrapping="Wrap" 
+                         AcceptsReturn="True" IsEnabled="{Binding Path=Amendment.Final, Converter={StaticResource InverseBooleanConverter}}"></TextBox>
 
                 <Grid Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="3">
                     <Grid.ColumnDefinitions>
