--- a/YellowstonePathology/UI/Surgical/ProspectiveReviewResultPage.xaml
+++ b/YellowstonePathology/UI/Surgical/ProspectiveReviewResultPage.xaml
@@ -93,6 +93,7 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>					
 				</Grid.RowDefinitions>
 
@@ -126,7 +127,11 @@
                     <Hyperlink Click="HyperLinkAddDrMatthews_Click">Dr. Matthews</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0" VerticalAlignment="Bottom">                    
+                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkAddDrMorrison_Click">Dr. Morrison</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0" VerticalAlignment="Bottom">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
                 </TextBlock>
 
