--- a/YellowstonePathology/UI/CodeSelection.xaml
+++ b/YellowstonePathology/UI/CodeSelection.xaml
@@ -35,8 +35,9 @@
 							</DataTemplate>
 						</GridViewColumn.CellTemplate>
 					</GridViewColumn>
-					<GridViewColumn DisplayMemberBinding="{Binding Path=CptCode.Code}" Header="CPT Code" Width="100"/>					
-				</GridView>
+					<GridViewColumn DisplayMemberBinding="{Binding Path=CptCode.Code}" Header="Code" Width="100"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=CptCode.Modifier}" Header="Modifier" Width="100"/>
+                </GridView>
 			</ListView.View>
 		</ListView>
 
