adding new facilities

--- a/YellowstonePathology/UI/Client/ClientEntry.xaml
+++ b/YellowstonePathology/UI/Client/ClientEntry.xaml
@@ -30,6 +30,7 @@
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
@@ -101,6 +102,10 @@
 
                     <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Notification Email:</TextBlock>
                     <TextBox Grid.Column="1" Grid.Row="15" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.AdditionalTestingNotificationEmail}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Path Group:</TextBlock>
+                    <ComboBox Grid.Column="1" Grid.Row="16" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=PathGroupFacilities}"
+							  SelectedValue="{Binding Path=Client.PathologyGroupId}" SelectedValuePath="FacilityId" DisplayMemberPath="FacilityName" />
 
                 </Grid>
 			</TabItem>
