--- a/YellowstonePathology/UI/Test/BoneMarrowSummaryResultPage.xaml
+++ b/YellowstonePathology/UI/Test/BoneMarrowSummaryResultPage.xaml
@@ -90,7 +90,7 @@
                     <TextBlock Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold">Reports included from this accession:</TextBlock>
                     <ListBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Width="400" HorizontalAlignment="Left" ItemsSource="{Binding Path=AccessionReportsIncluded}" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold">Reports from other accessions:</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold">Previous Accessions:</TextBlock>
                     <Grid Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto" />
@@ -110,11 +110,11 @@
 
                         <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Vertical" Height="250">
                             <TextBlock VerticalAlignment="Center" Margin="5,100,5,5">                    
-                                <Hyperlink Click="HyperLinkAddSelectedReport_Click">Add Selected</Hyperlink>
+                                <Hyperlink Click="HyperLinkAddSelectedReport_Click">Add to this report</Hyperlink>
                             </TextBlock>
 
                             <TextBlock VerticalAlignment="Center" Margin="5,5,5,5">                    
-                                <Hyperlink Click="HyperLinkRemoveSelectedReport_Click">Remove Selected</Hyperlink>
+                                <Hyperlink Click="HyperLinkRemoveSelectedReport_Click">Remove from this report</Hyperlink>
                             </TextBlock>
                         </StackPanel>
 
